--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>service</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>service</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Trade Service Platform</description>
 	<url/>
 	<licenses>
 		<license/>
